--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "@react-spring/web": "^9.7.3",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "latest",
