--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,14 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "typescript": "latest"
   }
 }
