--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
+    "howler": "^2.2.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "ts-audio": "^0.7.4",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@types/howler": "^2.2.9",
     "@types/jest": "^29.5.5",
     "@types/node": "latest",
     "@types/react": "latest",
