--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "howler": "^2.2.4",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "latest",
     "react-dom": "latest",
     "typewriter-effect": "^2.21.0"
